--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
             <div class="destination" id="barcelona">
                 <h2>Barcelona</h2>
             </div>
+
+            <div class="destination" id="Switzerland">
+                <h2>Switzerland</h2>
+            </div>
+
+            <div class="destination" id="Australia">
+                <h2>Australia</h2>
+            </div>
+
+            <div class="destination" id="Brazil">
+                <h2>Brazil</h2>
+            </div>
+
         </div>
     </div>
 
